iterating on fastify instance setup and adding initial draft of controller
